# justpros

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  schema.sql
.github/workflows/: deploy.yml
app/: auth.py  db.py  email.py  main.py  migrate.py  ratelimit.py  storage.py
app/routers/: api.py  auth.py  connections.py  facts.py  messages.py  page_api.py  pages.py  people.py  posts.py
app/templates/: base.html  facts_pending.html  forgot_password.html  index.html  login.html  messages.html  page_create.html  page_editors.html  page_profile.html  pages_list.html  people.html  privacy.html  profile.html  public_profile.html  reset_password.html  settings.html  signup.html  single_post.html  terms.html  verify_result.html
migrations/: 0000_consolidated_schema.sql  0001_initial.sql  0002_split_name_fields.sql  0003_rename_avatar_url_to_path.sql  0004_add_cover_path.sql  0005_connections.sql  0006_messages.sql  0007_multi_claims.sql  0008_claim_subject_body.sql  0009_unified_conversations.sql  0010_rename_claim_to_connection_request.sql  0011_posts_and_votes.sql  0012_user_notification_settings.sql  0013_post_media.sql  0014_post_media_video_type.sql  0015_abuse_reports.sql  0016_scale_votes.sql  0017_separate_connections.sql  0018_pages.sql  0019_page_kind_virtual.sql  0020_page_kind_education.sql  0021_facts.sql  0022_facts_approved_at.sql  0023_facts_mentions.sql  0024_simple_votes.sql  0025_invite_codes.sql
static/: robots.txt
static/js/: posts.js
